# Axilya

./: .gitignore  .travis.yml  BuildAll.sh  BuildRelease.sh  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE.md  LinuxDependenciesInstall.sh  Makefile  OSXBuildLibrary.sh  OSXDependenciesInstall.sh  README.md  ToDo.txt  axilya  build.sh  lib.sh  main  makefile  meeting.txt  todo.txt
Axilya.xcodeproj/: project.pbxproj
AxilyaRelease/: build.sh  main.cpp  myCore.cpp  myCore.hpp
Examples/: Makefile
axsrc/: AXString.cpp  Animator.cpp  Animator.hpp  BaseCore.cpp  BaseCore.hpp  BoxCollider.cpp  BoxCollider.hpp  CSVLoader.hpp  Client.cpp  Collider.cpp  Collider.hpp  Component.cpp  Component.hpp  Components.h  CustomComponent.hpp  Ellipse.h  Entity.cpp  Entity.hpp  EntityDrawTypes.hpp  Graphics.cpp  Graphics.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  Key.h  Poly.h  PrefabManager.cpp  PrefabManager.hpp  Rect.h  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  RigidBody.cpp  RigidBody.hpp  Runner.cpp  Runner.hpp  SDL2_gfxPrimitives.cpp  Scene.cpp  (+16 more)
cfsrc/: .BoxCollider.cpp.swp  .Entity.cpp.swp  .Scene.cpp.swp  Animator.cpp  BaseCore.cpp  BaseCore.hpp  BoxCollider.cpp  BoxCollider.hpp  Client.cpp  Client.hpp  Collider.cpp  Collider.hpp  Collision.cpp  Colour.h  Component.cpp  Component.hpp  Components.h  Ellipse.h  Entity.cpp  Entity.hpp  Graphics.cpp  Graphics.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  Key.h  Rect.h  ResourceManager.cpp  ResourceManager.hpp  RigidBody.cpp  RigidBody.hpp  Runner.cpp  Runner.hpp  Scene.cpp  Scene.hpp  Shape.h  StaticWorld.cpp  StaticWorld.hpp  Text.hpp  (+17 more)
data/: test.xml  world1.csv
gamesrc/: Core.cpp  Core.hpp  CoreMain.h  InputHandler.hpp  exampleComponent.cpp  exampleComponent.hpp  main.cpp
headers/: BaseCore.hpp  Destroyable.hpp  (+6 more)
(+323 files in other folders)
